# WuzeDesktopTool

./: .gitignore  CMakeLists.txt  Resource.rc  main.cpp  readme.md
FunctionUi/: CMakeLists.txt
FunctionUi/ComponentFactory/: CMakeLists.txt
FunctionUi/ComponentFactory/include/: ComponentFactory.h
FunctionUi/ComponentFactory/res/qss/: CrystalPushButton.qss  MacOS_LineEdit.qss  MacOS_PushButton.qss
FunctionUi/ComponentFactory/src/: LineEditFactory.cpp  PushButtonFactory.cpp
FunctionUi/FunctionPage/: CMakeLists.txt
FunctionUi/FunctionPage/include/: FunctionPage.h
FunctionUi/FunctionPage/src/: FunctionPage.cpp
MainFrameUi/: CMakeLists.txt
MainFrameUi/MainToolBox/: CMakeLists.txt
MainFrameUi/MainToolBox/include/: MainToolBox.h  MainToolBox_global.h
MainFrameUi/MainToolBox/src/: MainToolBox.cpp
MainFrameUi/MainWindow/: CMakeLists.txt
MainFrameUi/MainWindow/include/: ClassTool.hpp  MainWidget.h  MainWindow.h  MainWindows_global.h  SystemButton.h
MainFrameUi/MainWindow/res/qss/: ExitButton.qss  MinimizationButton.qss
MainFrameUi/MainWindow/src/: MainWidget.cpp  MainWidgetInit.cpp  MainWindow.cpp  SystemButton.cpp
MainFrameUi/WidgetFactory/: CMakeLists.txt
MainFrameUi/WidgetFactory/include/: WidgetAutoLoadMgr.h  WidgetFactory.h  WidgetFactory_global.h
MainFrameUi/WidgetFactory/src/: WidgetAutoLoadMgr.cpp  WidgetFactory.cpp
